<resources>
    <string name="app_name">Queen\'s Tour</string>
    <string name="line1">Welcome to the Queen\'s University Tour! To get started, tap the \'Take the Tour\' button!</string>
    <string name="action_settings">Settings</string>
    <string name="button1">Take the Tour</string>
    <string name="button2">Map of Campus</string>
    <string name="button3">Gallery</string>
    <string name="button4">Pro Tips</string>
    <string name="button5">F.A.Q.</string>
    <string name="button6">Links and Contacts</string>
    <string name="title_activity_guided_tour">Take the Tour</string>
    <string name="title_activity_campus_map">Map of Campus</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="title_activity_fun_facts">Fun Facts</string>
    <string name="title_activity_faq">Frequently Asked Questions</string>
    <string name="title_activity_links_and_contacts">Links and Contacts</string>
    <string name="title_activity_google_map_of_campus">Map</string>
    <string name="title_activity_list_of_gallery">ListOfGallery</string>
    <string name="EngTitle">Engineering Buildings</string>
    <string name="TitleContactsPage">Links and Contacts</string>
    <string name="GenInfo">General Information</string>
    <string name="C1"> Corrine Hoas</string>
    <string name="Info1">corrine.hoas@queensu.ca</string>
    <string name="C2"> Main Reception</string>
    <string name="Info2">reception@appsci.queensu.ca</string>
    <string name="VisandInfoCent">Visitor and Information Centre</string>
    <string name="C4">Email: jduc@queensu.ca </string>
    <string name="Info4">Phone: 613-533-2794 \nHours of Operation:\nMon - Fri (9:00 AM - 5:00 PM)\nSat - Sun (10:00 AM - 4:00 PM)</string>
    <string name="EngQandInfo">Engineering Questions and Information</string>
    <string name="C6">Email: engineering.first.year@queensu.ca</string>
    <string name="Info6">Phone: 613-533-6000 - Ext. 74092\nOffice: Room 300 Beamish-Munro Hall (ILC)</string>
    <string name="Useful">Useful Links</string>
    <string name="StuBlog"><a href="http://prospective.appsci.queensu.ca/Student-Bloggers.html">Student Bloggers (Life as an Engineer at Queens University)</a>\n \n<a href="http://issuu.com/queenseng/docs/parentguide?viewMode=presentation">Parents Guide to Queen\'s Engineering and Applied Science</a>\n\n<a href="http://www.queensu.ca/studentexperience/summer-orientation-soar">Summer Orientation to Academics and Resources (SOAR) 2015</a>\n\n<a href="http://www.queensu.ca/registrar/financials/tuition-fees">Information on Tuition and Fees</a></string>
    <string name="Social">Social Media</string>
    <string name="Info11">Join the <a href="https://www.facebook.com/groups/QueensU2020/">Queen’s University Class of 2020</a> Facebook Group!\n\nLike the <a href="https://www.facebook.com/QueensEngineer">Faculty of Engineering and Applied Science</a> Facebook Page!\n\nFollow <a href="https://twitter.com/queensu">@QueensU</a> on Twitter to receive updates from Queen’s University!\n\nFollow <a href="https://twitter.com/QueensEngineer">@QueensEngineer</a> on Twitter to receive updates from the Faculty of Engineering and Applied Science!\n</string>
    <string name="TitleFAQPage">Frequently Asked Questions</string>
    <string name="EngFAQ">Engineering:</string>
    <string name="UniFAQ">University Life:</string>
    <string name="Q1FAQPage">Q) What courses will I be taking in my First Year?</string>
    <string name="A1FAQPage">A) In First Year, students take a total of 11 courses. 10 are Half-Year courses, and 1 is a Full Year course.\n\n&#8226; FALL \n- APSC 100 (Module 1)\n- APSC 111 (Mechanics)\n- APSC 131 (Chemistry and Materials)\n- APSC 151 (Earth Systems and Engineering)\n- APSC 171 (Calculus I) \n \n&#8226; WINTER \n- APSC 100 (Module 3)\n- APSC 112 (Electricity and Magnetism \n- APSC 132 (Chemistry and its Applications) \n- APSC 172 (Calculus II) \n- APSC 174 (Introduction to Linear Algebra)\n\nStudents in the general stream also take APSC 161 (Basic Engineering Graphics) in the fall, and APSC 142 (Computer Programming for Engineers) in the winter, while, students in the ECE Innovation stream take APSC 142 in the fall, and APSC 161 in the winter. APSC 100 (Module 2) is broken up amongst students in both the Fall and Winter Term.</string>
    <string name="Q2FAQPage">Q) Do I get to take any complementary studies courses?</string>
    <string name="A2FAQPage">A) Students are required to receive at least 18.75 credits through completion of Complementary Studies Courses. These courses are taken in Upper Years, and can be from Engineering Economics, Communications, Humanities and Social Sciences, Linkage and Professional Issues, Performance Arts and Languages, and Management. These courses are different from the technical electives that students must also take. </string>
    <string name="Q3FAQPage">Q) Do I get to choose my courses this summer on SOLUS?</string>
    <string name="A3FAQPage">A) All First Year Engineering courses are core courses, meaning you must take and pass them in order to complete your degree. These courses are added into your schedule by the faculty. You are also assigned a section and subsection. You do not need to choose any courses in the summer unless you wish. Schedules will be posted on SOLUS sometime before the Fall Term begins. </string>
    <string name="Q4FAQPage">Q) What if I do not do well in my first term?</string>
    <string name="A4FAQPage">A) Queen’s University offers a back up plan called “J-Section”. If any student fails a course, has a GPA below 1.6 , or wants to improve their overall GPA, they can sign up for J-Section. Over the first few weeks of Winter Term, you retake your specified Fall Term courses and sit for exams during reading week. After this, you begin your Winter Term Classes, finishing sometime at the beginning of June. There is an additional fee required to be in J-Section. </string>
    <string name="Q5FAQPage">Q) What is this English Proficiency Test I hear about?</string>
    <string name="A5FAQPage">A) The English Proficiency Test is a written test that all engineering students are required to take and pass to obtain their degree. It is ideally completed in First Year, but is available for students to retake during each exam period over 4 years. </string>
    <string name="Q6FAQPage">Q) Are there private places I can go to work on campus?</string>
    <string name="A6FAQPage">A) Students can go to Stauffer Library and Douglas Library to do work in a private area, with access to many books, articles, and other information. Beamish Munro Hall (ILC) also has numerous study rooms available to be booked for group projects, or individual work. </string>
    <string name="Q7FAQPage">Q) When do I get to choose my engineering discipline and sub-plan?</string>
    <string name="ILCTitle">Integrated Learning Centre</string>
    <string name="ILCLocation">Location: Northeast corner of Union and Division Street (45 Union Street). </string>
    <string name="ILCInfoTitle">Main Uses</string>
    <string name="ILCInfo">The Integrated Learning Centre (ILC) is home to the Faculty of Engineering and Applied Science. It is also called Beamish-Munro Hall.  In addition, the building consists of group rooms, a multimedia facility, a site investigation facility, a design studio, and a prototyping studio and lab facilities. Beamish-Munro Hall was built to meet the needs of a growing multi-disciplinary Engineering faculty, as a model of sustainable construction. </string>
    <string name="ILCFactTitle">Interesting Facts</string>
    <string name="ILCFact"> Beamish-Munro Hall was named in honor of Robert Beamish (Sci\’60) and Donald Munro (Sci\’52). In 2005, a year after opening, it was selected as one of the most environmentally advanced buildings in Canada. The ILC is a student-oriented building that was designed in collaboration with students. It serves as a resource to broaden awareness of green building design and environmental sustainability. The facility itself is instrumented as a working laboratory, where students can see structural elements of the building that are usually hidden and monitor systems like air quality, heating, lighting, and cooling using specially designed software, showing how sustainable practices can be incorporated into building design. Inside the front doors is a green wall that filters particles from the air before it is distributed throughout the building. Since 2004, it has won a numerous number of awards.</string>
    <string name="LazyTitle">The Lazy Scholar</string>
    <string name="LazyLocation">Location: Lower level of Victoria Hall (75 Bader Lane). </string>
    <string name="LazyInfoTitle">Main Uses</string>
    <string name="LazyInfo">The Lazy Scholar is located in the basement of Victoria Hall, and serves as a retail food outlet and cafe for students, especially first years. Featuring flat screen TVs, pool tables, ping pong tables, a fireplace, and a comfortable lounge, the Lazy Scholar is the go to place for interaction amongst friends. </string>
    <string name="LazyFactTitle">Interesting Facts</string>
    <string name="LazyFact">The Lazy Scholar often holds events such as open mic nights, accepts meal plans, and is open late during the week for those night time studying snacks! </string>
    <string name="LennyTitle">Leonard Hall Cafeteria</string>
    <string name="LennyLocation">Location: West end of Bader Lane (150 Queen\’s Crescent). </string>
    <string name="LennyInfoTitle">Main Uses</string>
    <string name="LennyInfo">Leonard Dining Hall is a student cafeteria on campus. It provides new daily menu options, such as the vegan station, pizza bar, soup and salad bar and more. </string>
    <string name="LennyFactTitle">Interesting Facts</string>
    <string name="LennyFact">Leonard Cafeteria is the largest dining hall on Queen\’s campus with over 650 seats. Special lunches and dinners are scheduled regularly at different times throughout the week. For those with a meal plan (mainly first years), this is a great place to grab food. </string>
    <string name="NicolTitle">Nicol Hall</string>
    <string name="NicolLocation">Location: South side of Union Street between University Avenue and Fifth Field Company Lane (60 Union Street).</string>
    <string name="NicolInfoTitle">Main Uses</string>
    <string name="NicolInfo">Nicol Hall is home to many departments in the Faculty of Engineering and Applied Science.</string>
    <string name="NicolFactTitle">Interesting Facts</string>
    <string name="NicolFact">Nicol Hall has historical significance since it was used as an army barracks in WWI. The building was named after former professor William Nicol, who also donated funds for building construction.</string>
    <string name="ARCTitle">Athletics and Recreation Centre</string>
    <string name="ARCLocation">Location: Just north of University Avenue and Union Street (284 Earl Street).</string>
    <string name="ARCInfoTitle">Main Uses</string>
    <string name="ARCInfo">The Queen\’s Centre is a newly built common complex that serves as a community gathering place. It is home to the Athletics and Recreation Centre (ARC), the Drugs Mart Pharmacy, The Common Ground, The Grocery Checkout, retail food outlets, and rentable room spaces for clubs, rehearsal, and academics. The building incorporates academics and recreational activities, and calls all members of the community to its modern compound. </string>
    <string name="ARCFactTitle">Interesting Facts</string>
    <string name="ARCFact">The ARC is a highly modern and developed recreation centre, being equipped with a 38 x 25 metre pool, gym, squash/racquetball courts, fitness rooms, aerobic/weight rooms, and designated class areas. </string>
</resources>