<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/limestone_vines"
    android:id="@+id/linearLayout1"
    android:layout_height="fill_parent"
    android:layout_gravity="center_horizontal"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NicolTitle"
        android:id="@+id/NicolTitle"
        android:layout_gravity="center_horizontal"
        style="@style/BuildingPageTitle"/>
    <Space
        android:layout_width="15dp"
        android:layout_height="10dp"
        android:layout_gravity="center_vertical|center_horizontal"/>
    <ImageView
        android:layout_width="350dp"
        android:layout_height="225dp"
        android:id="@+id/imageView"
        android:src="@drawable/nicol"
        android:layout_gravity="center_vertical|center_horizontal"/>
    <Space
        android:layout_width="15dp"
        android:layout_height="10dp"
        android:layout_gravity="center_vertical|center_horizontal"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NicolLocation"
        android:id="@+id/NicolTitleLocation"
        android:layout_gravity="center_horizontal"
        style="@style/BuildingInformation"/>

    <Space
        android:layout_width="15dp"
        android:layout_height="10dp"
        android:layout_gravity="center_vertical|center_horizontal"/>
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NicolInfoTitle"
                android:id="@+id/NicolInfoTitle"
                style="@style/SubTitleBuilding"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NicolInfo"
                android:id="@+id/NicolBuildInfo"
                style="@style/BuildingInformation"
                />

            <Space
                android:layout_width="15dp"
                android:layout_height="10dp"
                android:id="@+id/space1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NicolFactTitle"
                android:id="@+id/NicolFactTitle"
                style="@style/SubTitleBuilding"
                />
            <Space
                android:layout_width="15dp"
                android:layout_height="10dp"
                android:id="@+id/space2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NicolFact"
                android:id="@+id/NicolFact"
                style="@style/BuildingInformation"
               />
        </LinearLayout>
    </ScrollView>


</LinearLayout>