<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/jacket_side"
    android:id="@+id/linearLayout1"
    android:layout_height="fill_parent"
    android:layout_gravity="center_horizontal">

    <Space
        android:layout_width="15dp"
        android:layout_height="10dp"
        android:layout_gravity="center_vertical|center_horizontal"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ARCTitle"
        android:id="@+id/ARCTitle"
        android:layout_gravity="center_horizontal"
        style="@style/BuildingPageTitle"/>
    <Space
        android:layout_width="15dp"
        android:layout_height="10dp"
        android:layout_gravity="center_vertical|center_horizontal"/>
    <ImageView
        android:layout_width="350dp"
        android:layout_height="225dp"
        android:id="@+id/imageView"
        android:src="@drawable/arc"
        android:layout_gravity="center_vertical|center_horizontal"/>
    <Space
        android:layout_width="15dp"
        android:layout_height="10dp"
        android:layout_gravity="center_vertical|center_horizontal"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ARCLocation"
        android:id="@+id/ARCTitleLocation"
        android:layout_gravity="center_horizontal"
        style="@style/BuildingInformation"/>

    <Space
        android:layout_width="15dp"
        android:layout_height="10dp"
        android:layout_gravity="center_vertical|center_horizontal"/>
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ARCInfoTitle"
                android:id="@+id/ARCInfoTitle"
                style="@style/SubTitleBuilding"
                android:layout_alignParentTop="true"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ARCInfo"
                android:id="@+id/ARCBuildInfo"
                style="@style/BuildingInformation"
                android:layout_below="@+id/InfoTitle"/>

            <Space
                android:layout_width="15dp"
                android:layout_height="10dp"
                android:id="@+id/space1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ARCFactTitle"
                android:id="@+id/ARCFactTitle"
                style="@style/SubTitleBuilding"
                android:layout_below="@+id/space1"/>
            <Space
                android:layout_width="15dp"
                android:layout_height="10dp"
                android:id="@+id/space2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ARCFact"
                android:id="@+id/ARCFact"
                style="@style/BuildingInformation"
                android:layout_below="@id/space2"/>
        </LinearLayout>
    </ScrollView>


</LinearLayout>
