<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/limestone_column"
    android:id="@+id/linearLayout1"
    android:layout_height="fill_parent"
    android:layout_gravity="center_horizontal">

    <Space
        android:layout_width="15dp"
        android:layout_height="10dp"
        android:layout_gravity="center_vertical|center_horizontal"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LennyTitle"
        android:id="@+id/LennyTitle"
        android:layout_gravity="center_horizontal"
        style="@style/BuildingPageTitle"/>
    <Space
        android:layout_width="15dp"
        android:layout_height="10dp"
        android:layout_gravity="center_vertical|center_horizontal"/>
    <ImageView
        android:layout_width="350dp"
        android:layout_height="225dp"
        android:id="@+id/imageView"
        android:src="@drawable/lenny"
        android:layout_gravity="center_vertical|center_horizontal"/>
    <Space
        android:layout_width="15dp"
        android:layout_height="10dp"
        android:layout_gravity="center_vertical|center_horizontal"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LennyLocation"
        android:id="@+id/LennyTitleLocation"
        android:layout_gravity="center_horizontal"
        style="@style/BuildingInformation"/>

    <Space
        android:layout_width="15dp"
        android:layout_height="10dp"
        android:layout_gravity="center_vertical|center_horizontal"/>
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LennyInfoTitle"
                android:id="@+id/LennyInfoTitle"
                style="@style/SubTitleBuilding"
                android:layout_alignParentTop="true"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LennyInfo"
                android:id="@+id/LennyBuildInfo"
                style="@style/BuildingInformation"
                android:layout_below="@+id/InfoTitle"/>

            <Space
                android:layout_width="15dp"
                android:layout_height="10dp"
                android:id="@+id/space1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LennyFactTitle"
                android:id="@+id/LennyFactTitle"
                style="@style/SubTitleBuilding"
                android:layout_below="@+id/space1"/>
            <Space
                android:layout_width="15dp"
                android:layout_height="10dp"
                android:id="@+id/space2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/LennyFact"
                android:id="@+id/LennyFact"
                style="@style/BuildingInformation"
                android:layout_below="@id/space2"/>
        </LinearLayout>
    </ScrollView>


</LinearLayout>
